# qt_vtk_cpp_sphere

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
